--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <!-- Pantalla de bienvenida -->
         <activity
-            android:name=".SplashActivity"
+            android:name=".PresentacionActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,14 +26,14 @@
 
         <!-- Pantalla principal -->
         <activity
-            android:name=".MainActivity"
+            android:name=".PrincipalActivity"
             android:exported="true" />
 
-        <!-- Pantalla secundaria. Establecemos MainActivity como padre de DetallesPersonajeActivity -->
+        <!-- Pantalla secundaria. Establecemos PrincipalActivity como padre de DetallesPersonajeActivity -->
         <activity
             android:name=".DetallesPersonajeActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".PrincipalActivity" />
 
     </application>
 
